<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mauro_memory_benchmark</name>
  <version>0.0.0</version>
  <description>Memory benchmark</description>
  <license>Apache License 2.0</license>
  <maintainer email="mpasserino@irobot.com">Mauro Passerino</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>benchmark_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
